simplification, the functionality is left strictly according to the TOR ALL FAILS
