# backend/src/main/java/com/artwell/api/enums/VersionUploadMode.java
@@ -1,6 +1,0 @@
-package com.artwell.api.enums;
-
-public enum VersionUploadMode {
-    NEW_VERSION,
-    ATTACH_AS_VERSION_WITHOUT_BUMP
-}
